# ChangeLog for media-libs/mediastreamer
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.75 2014/01/18 10:32:07 hwoarang Exp $

  15 Aug 2015; Guillaume Horel <guillaume.horel@gmail.com>
  -files/mediastreamer-9999-fix-tools.patch, mediastreamer-9999.ebuild:
  media-libs/mediastreamer: remove unused patch

  23 Jul 2015; Guillaume Horel <guillaume.horel@gmail.com>
  -files/mediastreamer-9999-tests.patch, mediastreamer-9999.ebuild:
  media-libs/mediastreamer: fix tests

*mediastreamer-9999 (12 Jul 2015)

  12 Jul 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +files/mediastreamer-9999-fix-tools.patch,
  +files/mediastreamer-9999-tests.patch,
  +files/mediastreamer-9999-v4l-automagic.patch, +mediastreamer-9999.ebuild,
  -files/mediastreamer-2.9.0-libav9.patch,
  -files/mediastreamer-2.9.0-tests.patch,
  -files/mediastreamer-2.9.0-underlinking.patch,
  -files/mediastreamer-2.9.0-v4l-automagic.patch,
  -files/mediastreamer-2.9.0-xxd.patch, -mediastreamer-2.9.0.ebuild:
  media-libs/mediastreamer: version bump and drop 2.9.0

*mediastreamer-2.11.2 (11 May 2015)

  11 May 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +files/mediastreamer-2.11.2-fix-tools.patch,
  +files/mediastreamer-2.11.2-tests.patch,
  +files/mediastreamer-2.11.2-v4l-automagic.patch, +mediastreamer-2.11.2.ebuild,
  -files/mediastreamer-2.11.1-fix-tools.patch,
  -files/mediastreamer-2.11.1-tests.patch,
  -files/mediastreamer-2.11.1-v4l-automagic.patch, -mediastreamer-2.11.1.ebuild:
  media-libs/mediastreamer: version bump

  10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +files/mediastreamer-2.11.1-fix-tools.patch, mediastreamer-2.11.1.ebuild:
  media-libs/mediastreamer: media-libs/mediastreamer fix tools compilation

  10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
  mediastreamer-2.11.1.ebuild, metadata.xml:
  media-libs/mediastreamer: cleanup use flags
