@@ -1,2 +1,1 @@
 DIST mediastreamer-2.10.0.tar.gz 3604794 SHA256 808d87c47b7e4c79698765894cbde74575011059b33a76280aa567f099dce1ea SHA512 d7db01c6c5acb563c9787438620c8b74dd21f47e4be5f6dfa5c138d752b70194e5dbcc51daaea4eab8e775298b50f1d253237eff4cae2c213afc55318cf56577 WHIRLPOOL b0aa4b8bed74946b58adf2f03fccf4c7919c89a7ae2bd6d1f48e2332cf3c5b1c0d6abce70407a9bcf5c7779a611b1906adf4870358515d9242af355b052b68d3
-DIST mediastreamer-2.11.2.tar.gz 9736766 SHA256 24d76d255f6c3193e078481cf3ea4891aa175b98ab1ff078e9298fc099456d37 SHA512 238113054e65ed097f81352fc2c8b03dfd51d2db08bcf0384cf52ec408dcc5b4a9e7dd417e9e74dc85707350b5438feb5f85b38318e74ee43ad276e3aa4e7831 WHIRLPOOL 33f8e2499f1368a2fa4538c1a870cc60ae9d8e53cb0f7c79feaccbab49e814aaabd364532592ed1635181491563b0b8b4d9e37952f026b52331bf78c96a62838
