@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.75 2014/01/18 10:32:07 hwoarang Exp $
 
+  04 Oct 2015; Guillaume Horel <guillaume.horel@gmail.com>
+  mediastreamer-2.11.2.ebuild:
+  media-libs/mediastreamer: install tagged version from github
+
   15 Aug 2015; Guillaume Horel <guillaume.horel@gmail.com>
   -files/mediastreamer-9999-fix-tools.patch, mediastreamer-9999.ebuild:
   media-libs/mediastreamer: remove unused patch
